mod css bug picasso traballante e readmore invisibile

--- a/www/css/style.css
+++ b/www/css/style.css
@@ -323,6 +323,7 @@ src: url('../fonts/DaxBold.ttf') format('truetype');
 .default_wrapper{
 	/*margin-top: 15px;*/
 	height: 100%;
+
 }
 
 .default_coverimage_block{
@@ -370,6 +371,7 @@ margin-bottom: 15px;
 	font-family: 'Dax';
 	font-size: 1.2em;
 	margin-left: 80%;
+	padding-bottom: 40px;
 
 	
 }
@@ -836,7 +838,7 @@ margin-left: 20px;
 #ente_sx_top{
 	position: relative;
 	width:100%;
-	height: 65%;
+	height: 64.7%;
 	background-image: url('../fs/sx_top.png');
 	background-size: auto 100%;
 	background-repeat:no-repeat;
@@ -884,7 +886,7 @@ margin-left: 20px;
 #ente_dx_bottom{
 	position: relative;
 	width:100%;
-	height: 65%;
+	height: 64.7%;
 	background-image: url('../fs/dx_bot.png');
 	background-size: auto 100%;
 	background-repeat:no-repeat;
